flask-app.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: namespace-a
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-app
  namespace: namespace-a
  labels:
    app: flask-app
spec:
  selector:
    matchLabels:
      app: flask-app
  template:
    metadata:
      labels:
        app: flask-app
    spec:
      serviceAccountName: flask-app-service-account
      containers:
      - name: flask-app
        image: pritam/flask-app:10
        ports:
        - name: http
          containerPort: 5000
        resources:
          requests:
            cpu: 500m
            memory: 1024Mi
          limits:
            cpu: 500m
            memory: 1024Mi
---
apiVersion: v1
kind: Service
metadata:
  name: flask-app
  namespace: namespace-a
  labels:
    app: flask-app
spec:
  selector:
    app: flask-app
  ports:
  - protocol: TCP
    port: 80
    targetPort: 5000
  type: NodePort
  
---
apiVersion: v1
kind: Namespace
metadata:
  name: namespace-b
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-app-caller
  namespace: namespace-b
  labels:
    app: flask-app-caller
spec:
  selector:
    matchLabels:
      app: flask-app-caller
  template:
    metadata:
      labels:
        app: flask-app-caller
    spec:
      serviceAccountName: flask-app-caller-service-account
      containers:
      - name: flask-app-caller
        image: pritam/flask-app:10
        ports:
        - name: http
          containerPort: 5000
        resources:
          requests:
            cpu: 500m
            memory: 1024Mi
          limits:
            cpu: 500m
            memory: 1024Mi
---
apiVersion: v1
kind: Service
metadata:
  name: flask-app-caller
  namespace: namespace-b
  labels:
    app: flask-app-caller
spec:
  selector:
    app: flask-app-caller
  ports:
  - protocol: TCP
    port: 80
    targetPort: 5000
  type: NodePort

---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: flask-app-rule
  namespace: namespace-a
spec:
  host: flask-app.namespace-a.svc.cluster.local
  trafficPolicy:
    loadBalancer:
      simple: ROUND_ROBIN
